[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "hresopt"
version = "2026.0.0"
dependencies = [
    "numpy",
    "pandas",
    "xarray",
    "netcdf4",
    "scipy"
]
requires-python = ">= 3.8"
authors = [
  {name = "Pandu Kristian Prayoga Simamora", email = "pandukristianps@gmail.com"},
]
description = "Optimal Sizing of Hybrid Renewable Energy Systems using Metaheuristic Algorithms"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
keywords = ["renewable energy", "energy", "HRES",
    "optimization", "optimal sizing",
    "metaheuristic", "metaheuristics", "algorithm", "artificial intelligence",
    "genetic algorithm", "particle swarm optimization", "ant colony optimization", "differential evolution"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python"
]

[project.optional-dependencies]
plot = ["matplotlib"]

[tool.setuptools.packages.find]
include = ["hresopt*"]

[project.urls]
"Related Publication" = "https://doi.org/10.1016/j.egyai.2026.100714"